--- a/src/content/post/composing-music-with-code/index.mdx
+++ b/src/content/post/composing-music-with-code/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Composing Music with Code
-publishDate: 26 March 2022
+publishedAt: 26 March 2022
 description: Exploring the idea of generating music from code with timb(re) a musical creative coding environment I made
 tags: ["programming", "creative coding", "svelte", "music", "javascript"]
 ---
