--- a/src/content/post/designing-electrical-applicances-for-off-grid-kenya/index.mdx
+++ b/src/content/post/designing-electrical-applicances-for-off-grid-kenya/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Designing Electrical Appliances for Off-Grid Kenya
-publishDate: 1 June 2021
+publishedAt: 1 June 2021
 description: University project to design an efficient kettle for off-grid Kenya; Silver award winner of the Efficiency for Access design challenge to help achieve UN SDG 7.
 tags:
  - hardware
