--- a/src/content/post/re-upcycling-a-drone/index.mdx
+++ b/src/content/post/re-upcycling-a-drone/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Re/upcycling a Drone
 description: An affordable quadcopter designed with a recycled/upcycled frame and cheap electronic components.
-publishDate: 1 August 2016
+publishedAt: 1 August 2016
 tags:
  - hardware
  - sustainability
