--- a/src/content/post/starting-with-rust/index.mdx
+++ b/src/content/post/starting-with-rust/index.mdx
@@ -1,15 +1,34 @@
 ---
-title: My first post about Rust
+title: Developing with Rust on a headless Raspberry Pi
 draft: true
-publishDate: 4 January 2024
+publishedAt: 4 January 2024
 tags:
- - rust
- - programming
-description: This is my first post about Rust programming language.
+  - rust
+  - programming
+  - raspberry pi
+description: My experience developing with Rust on a headless Raspberry Pi.
 ---
+
+# Introduction
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas sagittis turpis non vehicula. Suspendisse tempus mi et nunc bibendum, in accumsan ex cursus. Fusce vestibulum tempus erat. Praesent nec commodo lacus. Etiam lorem erat, accumsan quis venenatis vitae, imperdiet non tellus. Aenean porttitor tempor pulvinar. Vestibulum vel fermentum diam, non tempus sapien. Fusce quis urna eget nunc facilisis aliquam. Suspendisse in mauris faucibus, elementum augue egestas, euismod est. Duis suscipit varius ante, eget ultricies sem commodo sed. Mauris vulputate euismod turpis ut malesuada. Nam eu quam lorem. Maecenas fermentum pharetra vestibulum.
+
+## Setup
+
+Mauris a egestas metus, vitae finibus massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce molestie metus tempus posuere ullamcorper. Donec posuere condimentum quam, eu gravida felis. Vivamus vestibulum, odio quis pretium placerat, dui ligula ornare ex, id sollicitudin nisi ligula ac odio. Aliquam vitae finibus felis. Nulla ullamcorper nibh eget diam convallis dictum. Ut sed facilisis nisl, sed interdum lacus. Nunc vitae purus dignissim, feugiat eros et, lobortis leo. Cras euismod eu sem vitae varius. Curabitur maximus facilisis enim, efficitur vehicula urna feugiat sit amet. Praesent sit amet mollis nunc.
+
+Maecenas ipsum lacus, pharetra sit amet congue fermentum, mattis vitae sapien. Aenean eleifend malesuada massa, ut blandit odio vulputate condimentum. Phasellus volutpat mi neque, vel sagittis arcu blandit in. Proin vitae libero a neque lacinia cursus vitae ut justo. Morbi nec pulvinar enim, vitae egestas odio. Aliquam vel quam iaculis, tempus dolor ac, dictum mi. Mauris ac blandit mauris. Pellentesque ultrices ipsum vel libero rutrum placerat. In sit amet nunc a lacus molestie varius. Vestibulum lacinia dolor non tristique tempor. Praesent eu auctor eros. Sed in aliquet massa. In suscipit semper justo, at cursus leo tempus id. Suspendisse sed finibus sem, eget sodales urna. Pellentesque pretium orci sed hendrerit tempus.
+
+## Why Rust?
+
+Vel sagittis arcu blandit in. Proin vitae libero a neque lacinia cursus vitae ut justo. Morbi nec pulvinar enim, vitae egestas odio. Aliquam vel quam iaculis, tempus dolor ac, dictum mi. Mauris ac blandit mauris. Pellentesque ultrices ipsum vel libero rutrum placerat. In sit amet nunc a lacus molestie varius. Vestibulum lacinia dolor non tristique tempor. Praesent eu auctor eros. Sed in aliquet massa. In suscipit semper justo, at cursus leo tempus id. Suspendisse sed finibus sem, eget sodales urna. Pellentesque pretium orci sed hendrerit tempus.
+
+### Hello, world!
 
 ```rust
 fn main() {
-		println!("Hello, world!");
+  println!("Hello, world!");
 }
 ```
+
+Vel sagittis arcu blandit in. Proin vitae libero a neque lacinia cursus vitae ut justo. Morbi nec pulvinar enim, vitae egestas odio. Aliquam vel quam iaculis, tempus dolor ac, dictum mi. Mauris ac blandit mauris. Pellentesque ultrices ipsum vel libero rutrum placerat. In sit amet nunc a lacus molestie varius. Vestibulum lacinia dolor non tristique tempor. Praesent eu auctor eros. Sed in aliquet massa. In suscipit semper justo, at cursus leo tempus id. Suspendisse sed finibus sem, eget sodales urna. Pellentesque pretium orci sed hendrerit tempus.
