--- a/src/content/post/from-rapid-flu-testing-to-lidar/index.mdx
+++ b/src/content/post/from-rapid-flu-testing-to-lidar/index.mdx
@@ -1,11 +1,12 @@
 ---
 title: From Rapid Flu Testing to LiDAR for Autonomous Driving
 description: A reflection on my year long placement at TTP, an engineering consultancy and the wide range of interesting projects I worked on.
-publishDate: 1 June 2021
+publishedAt: 1 July 2020
 tags:
- - signal processing
- - programming
+  - signal processing
+  - programming
 ---
+
 During my year-long industrial placement at TTP[^1] , I worked in the Sensors and Devices (SD) group alongside a multidisciplinary team of scientists and engineers.
 
 [^1]: The Technology Partnership, https://ttp.com/
@@ -34,7 +35,7 @@ Prior to my placement, I had little experience with Python or algorithm developm
 
 ![Why is compressed sensing of interest?](./placement-3.png)
 
-I started with a market analysis, academic research and a literature review where I compared the many ways of upsampling data. After reading relevant academic papers, I selected a few promising techniques to take further. I made simple 1D demos to test the edge cases of a handful of techniques and get a feel for their relative performance to each other. Compressed sensing  came out to be a perfect mix of good upsampling performance yet simple & cheap to compute.
+I started with a market analysis, academic research and a literature review where I compared the many ways of upsampling data. After reading relevant academic papers, I selected a few promising techniques to take further. I made simple 1D demos to test the edge cases of a handful of techniques and get a feel for their relative performance to each other. Compressed sensing came out to be a perfect mix of good upsampling performance yet simple & cheap to compute.
 
 ![Reconstruction using only 5% of the original signal](./placement-4.png)
 
