chore: dump and fix formatting

--- a/src/content/post/composing-music-with-code/index.mdx
+++ b/src/content/post/composing-music-with-code/index.mdx
@@ -9,13 +9,14 @@ tags: ["programming", "creative coding", "svelte", "music", "javascript"]
 
 You may have heard of terms like **generative music** from Brain Eno's _Music for Airports_[^1], or [**algoraves**](https://algorave.com/), live events where people dance to music generated from algorithms, or [**live coding**](https://github.com/pjagielski/awesome-live-coding-music), on the fly progamming for music.
 
-[^1]:A release of [excerpts of generative music](https://en.wikipedia.org/wiki/Brian_Eno#Released_excerpts)
+[^1]:
+    A release of [excerpts of generative music](https://en.wikipedia.org/wiki/Brian_Eno#Released_excerpts)
 
     https://open.spotify.com/track/1Qr6LFKNBFNNa2y6nMDO31?si=8812c14cdd4c42c0
 
 I certainly hadn't, until I watched Resident Advisor's video[^2] on algoraves. This led me down a youtube spiral of watching other[^3] videos[^4] about creating music with code.
 
-[^2]:_'Algorave Generation'_ mini documentary by Resident Advisor
+[^2]: _'Algorave Generation'_ mini documentary by Resident Advisor
 
     https://www.youtube.com/watch?v=S2EZqikCIfY
 
@@ -40,4 +41,3 @@ https://www.youtube.com/watch?v=hCIS89XUXQU
 I made this quick, fun project using SvelteKit over the last few days. Although it uses SvelteKit, it is a SPA^[**S**ingle **P**age **A**pplication]. I was going to just use a standard svelte project but SvelteKit makes it so easy to export and host on places like GitHub Pages and even gives easy ways to export some pages as plain HTML, like /about in this project. It uses ToneJS for the audio synthesis but other than that its just Svelte, which was easy to use as always.
 
 You can try it out at [paullj.github.io/timb](https://paullj.github.io/timb) and the code is available [here](https://github.com/paullj/timb).
-
