content: description for rust post

--- a/src/content/post/cross-compiling-rust-for-raspberry-pi-development/index.mdx
+++ b/src/content/post/cross-compiling-rust-for-raspberry-pi-development/index.mdx
@@ -1,6 +1,5 @@
 ---
 title: Cross-Compiling Rust for Raspberry Pi Development
-draft: true
 publishedAt: 9 September 2024
 tags:
   - rust
@@ -9,7 +8,7 @@ tags:
   - embedded
   - hardware
   - electronics
-description: Starting out with Rust for a Raspberry Pi Zero 2W. A loose guide for a practical development setup which lets me write and compile on my local machine, but deploy and run on the Pi.
+description: Starting out with Rust for Raspberry Pi A loose guide for a practical development setup which lets me write and compile on my local machine, but deploy and run on the Pi.
 ---
 
 I’m diving into Rust and embedded development, both of which I’ve dipped in to before but never fully committed to. With my Raspberry Pi sitting around collecting dust, I figured it’s worth learning something new so I can put it to good use. I'll be using the [Raspberry Pi Zero 2W](https://www.raspberrypi.com/products/raspberry-pi-zero-2-w/) for this project, as it's a small and cheap device but more importantly, I have one lying around.
