feat: add assides, update code blocks + styling

--- a/src/content/post/composing-music-with-code/index.mdx
+++ b/src/content/post/composing-music-with-code/index.mdx
@@ -5,7 +5,25 @@ description: Exploring the idea of generating music from code with timb(re) a mu
 tags: ["programming", "creative coding", "svelte", "music", "javascript"]
 ---
 
-**NOTE:** _Want to skip to making music? You can try timb(re) out at [paullj.github.io/timb](https://paullj.github.io/timb) and the code is available [here](https://github.com/paullj/timb)._
+:::note
+Want to skip to making music? You can try timb(re) out at [paullj.github.io/timb](https://paullj.github.io/timb) or check out the code [here](https://github.com/paullj/timb).
+:::
+
+:::warning
+test warning
+:::
+
+:::important
+test important
+:::
+
+:::caution
+test caution
+:::
+
+:::tip
+test tip
+:::
 
 You may have heard of terms like **generative music** from Brain Eno's _Music for Airports_[^1], or [**algoraves**](https://algorave.com/), live events where people dance to music generated from algorithms, or [**live coding**](https://github.com/pjagielski/awesome-live-coding-music), on the fly progamming for music.
 
