content: add github link to pcb post

--- a/src/content/post/learning-pcb-design-and-embedded-rust/index.mdx
+++ b/src/content/post/learning-pcb-design-and-embedded-rust/index.mdx
@@ -2,6 +2,7 @@
 title: Learning PCB Design and Embedded Rust
 description: Starting out with writing embedded Rust for my first PCB I designed and manufactured.
 publishedAt: 28 December 2024
+updatedAt: 31 December 2024
 tags:
   - hardware
   - electronics
@@ -75,6 +76,10 @@ EDA tools like KiCad are great for this, they make it hard to go wrong, and have
 ![Screenshot of Layout of PCB](./layout.png)
 
 Your final design needs to be manufacturable, and KiCad makes this a breeze to do. This stage is also where you can start to really visualise what the final product will look like which I found quite fun. Its satisfying iterating and packing the components together like a puzzle. Once you have a rhythm going, and a bit of a structured process it doesn't take too long to get a layout you are happy with.
+
+:::note
+You can find the KiCad project files of the schematic and layout for my PCB on [GitHub](https://github.com/paullj/synth/tree/main/synth-hardware)
+:::
 
 ## Off To The Factory
 
